# clion-freertos-hifive-revb-blinky

./: CMakeLists.txt  README.md
freedom-metal/: CMakeLists.txt
src/: main.c
